--- a/NeuroApp/Storyboard/Home.storyboard
+++ b/NeuroApp/Storyboard/Home.storyboard
@@ -19,21 +19,21 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ogf-JK-f3T">
-                                <rect key="frame" x="20" y="237" width="374" height="422"/>
+                                <rect key="frame" x="20" y="254" width="374" height="388"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="hDw-4C-OJn">
-                                        <rect key="frame" x="104" y="0.0" width="166" height="166"/>
+                                        <rect key="frame" x="104" y="0.0" width="166" height="165.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="hDw-4C-OJn" secondAttribute="height" id="gIx-5G-KZT"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C0q-Hj-I6j" customClass="RoundButton" customModule="NeuroApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="196" width="374" height="60"/>
-                                        <color key="backgroundColor" name="NAGreen"/>
+                                        <rect key="frame" x="0.0" y="195.5" width="374" height="60"/>
+                                        <color key="backgroundColor" name="NABlue"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="vEZ-2k-fou"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                         <state key="normal" title="Questionnaire button">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
@@ -42,25 +42,25 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your status:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.59999999999999998" translatesAutoresizingMaskIntoConstraints="NO" id="peg-x4-Apu">
-                                        <rect key="frame" x="0.0" y="286" width="374" height="36"/>
+                                        <rect key="frame" x="0.0" y="285.5" width="374" height="36"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mG5-g7-eFA">
-                                        <rect key="frame" x="0.0" y="352" width="374" height="70"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mG5-g7-eFA" customClass="UserStatusView" customModule="NeuroApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="341.5" width="374" height="46.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your status" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cc6-zh-nTf">
-                                                <rect key="frame" x="20" y="20" width="334" height="30"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your status" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cc6-zh-nTf">
+                                                <rect key="frame" x="20" y="10" width="334" height="26.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="cc6-zh-nTf" secondAttribute="trailing" constant="20" id="5vT-ZY-HZL"/>
-                                            <constraint firstItem="cc6-zh-nTf" firstAttribute="top" secondItem="mG5-g7-eFA" secondAttribute="top" constant="20" id="SHX-So-HIH"/>
-                                            <constraint firstAttribute="bottom" secondItem="cc6-zh-nTf" secondAttribute="bottom" constant="20" id="TjN-TS-6Ua"/>
+                                            <constraint firstItem="cc6-zh-nTf" firstAttribute="top" secondItem="mG5-g7-eFA" secondAttribute="top" constant="10" id="SHX-So-HIH"/>
+                                            <constraint firstAttribute="bottom" secondItem="cc6-zh-nTf" secondAttribute="bottom" constant="10" id="TjN-TS-6Ua"/>
                                             <constraint firstItem="cc6-zh-nTf" firstAttribute="leading" secondItem="mG5-g7-eFA" secondAttribute="leading" constant="20" id="bDu-d7-Gsd"/>
                                         </constraints>
                                     </view>
@@ -75,7 +75,7 @@
                                     <constraint firstAttribute="bottom" secondItem="mG5-g7-eFA" secondAttribute="bottom" id="jAp-Tb-jK6"/>
                                     <constraint firstItem="hDw-4C-OJn" firstAttribute="top" secondItem="ogf-JK-f3T" secondAttribute="top" id="m1O-VX-Gly"/>
                                     <constraint firstAttribute="trailing" secondItem="peg-x4-Apu" secondAttribute="trailing" id="pyh-qd-3XL"/>
-                                    <constraint firstItem="mG5-g7-eFA" firstAttribute="top" secondItem="peg-x4-Apu" secondAttribute="bottom" constant="30" id="qI3-l0-ONE"/>
+                                    <constraint firstItem="mG5-g7-eFA" firstAttribute="top" secondItem="peg-x4-Apu" secondAttribute="bottom" constant="20" id="qI3-l0-ONE"/>
                                     <constraint firstAttribute="trailing" secondItem="C0q-Hj-I6j" secondAttribute="trailing" id="vME-f4-Fhx"/>
                                     <constraint firstItem="mG5-g7-eFA" firstAttribute="leading" secondItem="ogf-JK-f3T" secondAttribute="leading" id="wTP-tm-eZ3"/>
                                     <constraint firstItem="C0q-Hj-I6j" firstAttribute="top" secondItem="hDw-4C-OJn" secondAttribute="bottom" constant="30" id="yds-gp-rOh"/>
@@ -144,8 +144,8 @@
     <resources>
         <image name="Image" width="512" height="512"/>
         <image name="house" catalog="system" width="128" height="106"/>
-        <namedColor name="NAGreen">
-            <color red="0.37999999523162842" green="0.80000001192092896" blue="0.45899999141693115" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="NABlue">
+            <color red="0.28235294117647058" green="0.6705882352941176" blue="0.97254901960784312" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
