--- a/NeuroApp/Storyboard/Preview.storyboard
+++ b/NeuroApp/Storyboard/Preview.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K80-14-Tdl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K80-14-Tdl">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -29,8 +30,8 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="kUo-tZ-ziX"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                                <state key="normal" title="Button">
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                <state key="normal" title="BEGIN">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
@@ -76,6 +77,7 @@
                     </view>
                     <connections>
                         <outlet property="infoLabel" destination="A15-Le-435" id="Pn5-1c-Xq2"/>
+                        <outlet property="nextButton" destination="5t4-VC-zsx" id="lKz-LJ-bv0"/>
                         <segue destination="Y6W-OH-hqX" kind="presentation" identifier="showPreviewPartInfo" modalPresentationStyle="fullScreen" id="biH-uP-xmd"/>
                     </connections>
                 </viewController>
@@ -120,8 +122,8 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="wX5-7N-5Ra"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                                <state key="normal" title="Button">
+                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                                <state key="normal" title="OK">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
@@ -136,7 +138,6 @@
                                             <constraint firstItem="3PV-ij-DsV" firstAttribute="top" secondItem="gnz-TY-m64" secondAttribute="top" constant="20" id="FRU-J6-zhy"/>
                                             <constraint firstAttribute="bottom" secondItem="1Wo-pw-vwY" secondAttribute="bottom" constant="20" id="QeD-R1-bf7"/>
                                             <constraint firstItem="3PV-ij-DsV" firstAttribute="centerX" secondItem="gnz-TY-m64" secondAttribute="centerX" id="Rrn-AJ-zgl"/>
-                                            <constraint firstItem="1Wo-pw-vwY" firstAttribute="top" relation="greaterThanOrEqual" secondItem="6XB-39-ulb" secondAttribute="bottom" constant="20" id="SI9-ey-auS"/>
                                             <constraint firstItem="6XB-39-ulb" firstAttribute="top" secondItem="3PV-ij-DsV" secondAttribute="bottom" constant="20" id="dQh-Y6-1P4"/>
                                             <constraint firstItem="1Wo-pw-vwY" firstAttribute="leading" secondItem="gnz-TY-m64" secondAttribute="leading" constant="20" id="hyy-KC-zKz"/>
                                             <constraint firstItem="6XB-39-ulb" firstAttribute="centerX" secondItem="gnz-TY-m64" secondAttribute="centerX" id="iqO-5i-F54"/>
@@ -166,6 +167,7 @@
                     <navigationItem key="navigationItem" id="V2B-p4-CHr"/>
                     <connections>
                         <outlet property="infoLabel" destination="6XB-39-ulb" id="vqq-bZ-Lzu"/>
+                        <outlet property="nextButton" destination="1Wo-pw-vwY" id="jJL-eg-YHF"/>
                         <outlet property="titleLabel" destination="3PV-ij-DsV" id="7fb-8T-iba"/>
                         <segue destination="TbF-CC-e94" kind="presentation" identifier="showPartOneQuiz" modalPresentationStyle="fullScreen" id="rOq-T4-Zpe"/>
                     </connections>
