--- a/NeuroApp/Storyboard/Quiz/QuizPartOne.storyboard
+++ b/NeuroApp/Storyboard/Quiz/QuizPartOne.storyboard
@@ -122,8 +122,8 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="ref-j6-0oC"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                <state key="normal" title="Button">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <state key="normal" title="NEXT">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
