--- a/NeuroApp/Storyboard/Quiz/QuizPartTwo.storyboard
+++ b/NeuroApp/Storyboard/Quiz/QuizPartTwo.storyboard
@@ -25,7 +25,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TRS-2p-kCH" customClass="RoundButton" customModule="NeuroApp" customModuleProvider="target">
-                                <rect key="frame" x="40" y="518" width="334" height="50"/>
+                                <rect key="frame" x="40" y="344" width="334" height="50"/>
                                 <color key="backgroundColor" name="NAGreen"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="aqi-gv-7Ai"/>
@@ -38,10 +38,10 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gxw-Jk-1xZ" customClass="OptionView" customModule="NeuroApp" customModuleProvider="target">
-                                <rect key="frame" x="20" y="114" width="374" height="374"/>
+                                <rect key="frame" x="20" y="114" width="374" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="gxw-Jk-1xZ" secondAttribute="height" multiplier="1:1" id="EHV-LB-XBO"/>
+                                    <constraint firstAttribute="height" priority="1" constant="200" id="C3A-t8-InF"/>
                                 </constraints>
                             </view>
                         </subviews>
