--- a/NeuroApp/Storyboard/Quiz/QuizPartTwo.storyboard
+++ b/NeuroApp/Storyboard/Quiz/QuizPartTwo.storyboard
@@ -30,9 +30,10 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="aqi-gv-7Ai"/>
                                 </constraints>
-                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="next:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="4T3-c3-tnX"/>
                                 </connections>
